--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@
   <link rel="icon" href="favicon.ico">
 </head>
 <body style="background-color:black">
-  <h1 font color = "white">Hello! I'm Pikko</h1>
+  <h1><font color="yellow">Hello! I'm Pikko</font></h1>
   
