--- a/parrot/parrot.html
+++ b/parrot/parrot.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 	<head>
-		<title>southern country</title>
+		<title>about this place</title>
 		<link rel="icon" href="favicon.ico">
 	</head>
 	<body style="background-color:black">
