--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <title>How to where are you from?</title>
+  <title>southern country</title>
   <link rel="icon" href="favicon.ico">
 </head>
 <body style="background-color:black">
