--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <title>southern country</title>
   <link rel="icon" href="favicon.ico">
 </head>
+<a href="https://ehcfbi.github.io/southern-country/">
+  <img src="HOME.png" alt="HOME">
+</a>
 <body style="background-color:black">
-  <h1><font color="yellow">Hello! I'm Pikko</font></h1>
+  <h1><font color="yellow">Hello! I'm Pikko.</font></h1>
   
