--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link rel="icon" href="favicon.ico">
 </head>
 <a href="https://ehcfbi.github.io/southern-country/">
-  <img src="Home.png" alt="Home">
+  <img src="Home.png" alt="Home" width=”203” height=”100”>
 </a>
 <body style="background-color:black">
   <h1><font color="yellow">Hello! I'm Pikko.</font></h1>
