--- a/index.html
+++ b/index.html
@@ -9,4 +9,5 @@
 <body style="background-color:black">
   <h1><font color="yellow">Hello! I'm Pikko.</font></h1>
   <p><font size="5" color="green"><a href="https://ehcfbi.github.io/southern-country/parrot/parrot.html">About this place</a></font></p>
-  
+</body>
+</html>
