--- a/parrot/parrot.html
+++ b/parrot/parrot.html
@@ -4,5 +4,8 @@
 		<link rel="icon" href="favicon.ico">
 	</head>
 	<body style="background-color:black">
+		<a href="https://ehcfbi.github.io/southern-country/">
+			<img src="HOME.png" alt="HOME">
+		</a>
         <img src="southern country.png" alt="23856169">
 		<h1><font color = "blue">This is the southern country.</h1>
