--- a/parrot/parrot.html
+++ b/parrot/parrot.html
@@ -7,5 +7,5 @@
 		<a href="https://ehcfbi.github.io/southern-country/">
 			<img src="HOME.png" alt="HOME">
 		</a>
-        <img src="southern country.png" alt="23856169">
+        <p><img src="southern country.png" alt="23856169"></p>
 		<h1><font color = "blue">This is the southern country.</h1>
