--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </a>
 <body style="background-color:black">
   <h1><font color="yellow">Hello! I'm Pikko.</font></h1>
-  <p><font size="7"><a href="https://ehcfbi.github.io/southern-country/parrot/parrot.html">About this place</a></font></p>
+  <p><font size="7"><a href="https://ehcfbi.github.io/southern-country/parrot/">About this place</a></font></p>
 </body>
 </html>
