--- a/parrot/index.html
+++ b/parrot/index.html
@@ -2,6 +2,7 @@
 	<head>
 		<title>about this place</title>
 		<link rel="icon" href="favicon.ico">
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body style="background-color:black">
 		<a href="https://ehcfbi.github.io/southern-country/">
@@ -9,3 +10,14 @@
 		</a>
         <p><img src="southern country.png" alt="23856169"></p>
 		<h1><font color = "blue">This is the southern country.</h1>
+	
+	<div id="form-container">
+        <input type="text" id="input-box" placeholder="値を入力してください">
+        <button id="submit-button">enter</button>
+    </div>
+    <div id="display-content" style="display: none;">
+        <!-- ページ上部に表示される内容 -->
+        <h1>特定の値が一致しました！</h1>
+        <p>特定の値が入力されました。</p>
+    </div>
+	<script src="script.js"></script>
