--- a/parrot/index.html
+++ b/parrot/index.html
@@ -12,7 +12,7 @@
 		<h1><font color = "blue">This is the southern country.</h1>
 	
 	<div id="form-container">
-        <input type="text" id="input-box" placeholder="値を入力してください">
+        <input type="text" id="input-box" placeholder="Please enter.">
         <button id="submit-button">enter</button>
     </div>
 	<script src="script.js"></script>
