--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body style="background-color:black">
   <h1><font color="yellow">Hello! I'm Pikko.</font></h1>
   <p><font size="7"><a href="https://ehcfbi.github.io/southern-country/parrot/">About this place</a></font></p>
+  <p><font size="7"><a href="https://ehcfbi.github.io/southern-country/hegira/">Subscribe</a></font></p>
 </body>
 </html>
