--- a/hegira/index.html
+++ b/hegira/index.html
@@ -8,7 +8,7 @@
       var answer = prompt("What is the real password?");
       if(btoa(answer) === encoded)｛
       ｝else｛
-      alert(That is not good at all.);
+      alert("That is not good at all.");
       location.reload();
       ｝;
     </script>
