--- a/hegira/index.html
+++ b/hegira/index.html
@@ -6,11 +6,11 @@
     <script>
       const encoded = "cmgyMzgkNQ==";
       var answer = prompt("What is the real password?");
-      if(btoa(answer) === encoded)｛
-      ｝else｛
+      if(btoa(answer) === encoded){
+      }else{
       alert("That is not good at all.");
       location.reload();
-      ｝;
+      };
     </script>
   </head>
 <body style="background-color:black">
