--- a/hegira/index.html
+++ b/hegira/index.html
@@ -14,5 +14,7 @@
     </script>
   </head>
 <body style="background-color:black">
-  
+  <h1><font color="white">Let's go to the southern country!</font></h1>
+	<p><font size="7"><a href="https://ehcfbi.github.io/southern-country/hegira/ticket.png">Take ticket</a></font></p>
+	<p><font color="white" size="3">This screen is not the actual purchase screen.</font></p>
 </body>
